# x-feeder

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: cfg.ini
src/: main.py  supabase_test_access.py
vercel/: vercel.json
x-feeder/config/: cfg.ini  vercel.json
x-feeder/src/: main.py  supabase_test_access.py
x-feeder/src/lib/: error.py  x.py
